# apitrace

./: CMakeLists.txt  README.markdown  small.txt
common/: trace_loader.hpp
gui/: CMakeLists.txt
lib/trace/: trace_parser.hpp  trace_parser_flags_test.cpp
retrace/: CMakeLists.txt  glretrace.hpp  glretrace.py  glretrace_glx.cpp  glretrace_main.cpp  glretrace_ws.cpp  glstate_images.cpp  glstate_images.hpp  glws.hpp  retrace_swizzle.cpp
retrace/daemon/: CMakeLists.txt  CustomProtoBuf.cmake  Lint.cmake  cpplint.py  dir-locals.el  glframe_batch.cpp  glframe_batch.hpp  glframe_cancellation.cpp  glframe_cancellation.hpp  glframe_gpu_speed.hpp  glframe_gpu_speed_linux.cpp  glframe_logger.cpp  glframe_logger.hpp  glframe_metrics.cpp  glframe_metrics.hpp  glframe_metrics_amd.cpp  glframe_metrics_amd.hpp  glframe_metrics_intel.cpp  glframe_metrics_intel.hpp  glframe_os.hpp  glframe_os_linux.cpp  glframe_os_win.cpp  glframe_perf_enabled.hpp  glframe_perf_enabled_linux.cpp  glframe_retrace.cpp  glframe_retrace.hpp  glframe_retrace_context.cpp  glframe_retrace_context.hpp  glframe_retrace_interface.hpp  glframe_retrace_render.cpp  glframe_retrace_render.hpp  glframe_retrace_skeleton.cpp  glframe_retrace_skeleton.hpp  glframe_retrace_stub.cpp  glframe_retrace_stub.hpp  glframe_retrace_texture.cpp  glframe_retrace_texture.hpp  glframe_socket.cpp  glframe_socket.hpp  glframe_socket_linux.cpp  (+21 more)
retrace/daemon/amd_gpa/: .gitignore  CMakeLists.txt  fetch_gpa.sh  glframe_metrics_amd_gpa.cpp  glframe_metrics_amd_gpa.hpp  glframe_metrics_amd_gpa_stub.cpp
retrace/daemon/bargraph/: CMakeLists.txt  glframe_bargraph.cpp  glframe_bargraph.hpp  glframe_bargraphmodel.cpp  glframe_bargraphmodel.hpp  glframe_checkerror.hpp  glframe_glhelper.cpp  glframe_glhelper.hpp  glframe_qbargraph.cpp  glframe_qbargraph.hpp  glframe_qselection.cpp  glframe_qselection.hpp
retrace/daemon/bargraph/test/: CMakeLists.txt  main_test.cpp  test_bargraph.cpp  test_bargraph_ctx.cpp  test_bargraph_ctx.hpp  test_selection.cpp  test_selection.hpp
retrace/daemon/bargraph/ui/: CMakeLists.txt  main.cpp  resources.qrc
retrace/daemon/bargraph/ui/qml/: mainwin.qml
retrace/daemon/context/: CMakeLists.txt  glframe_thread_context.cpp  glframe_thread_context.hpp
retrace/daemon/doc/: 0001-i965-batch-unconditionally-allocate-DEBUG_BATCH-hash.patch  README.txt
retrace/daemon/framestat/: CMakeLists.txt  glframe_loop.cpp  glframe_loop.hpp  main.cpp
retrace/daemon/gldispatch/: CMakeLists.txt  glframe_glhelper.cpp  glframe_glhelper.hpp
retrace/daemon/server/: CMakeLists.txt  main.cpp
retrace/daemon/test/: CMakeLists.txt  main_test.cpp  retrace_daemon_test.cpp  retrace_file_transfer_test.cpp  retrace_log_test.cpp  retrace_metrics_test.cpp  retrace_socket_test.cpp  retrace_test.hpp  retrace_thread_test.cpp  simple.trace
retrace/daemon/ui/: CMakeLists.txt  glframe_api_model.cpp  glframe_api_model.hpp  glframe_batch_model.cpp  glframe_batch_model.hpp  glframe_experiment_model.cpp  glframe_experiment_model.hpp  glframe_metrics_model.cpp  glframe_metrics_model.hpp  glframe_qutil.cpp  glframe_qutil.hpp  glframe_rendertarget_model.cpp  glframe_rendertarget_model.hpp  glframe_retrace_images.cpp  glframe_retrace_images.hpp  glframe_retrace_model.cpp  glframe_retrace_model.hpp  glframe_shader_model.cpp  glframe_shader_model.hpp  glframe_state_model.cpp  glframe_state_model.hpp  glframe_texture_model.cpp  glframe_texture_model.hpp  glframe_uniform_model.cpp  glframe_uniform_model.hpp  main.cpp  resources.qrc
retrace/daemon/ui/qml/: ApiControl.qml  BarGraphControl.qml  BatchControl.qml  ComboBoxFitContents.qml  ExperimentControl.qml  MetricTabControl.qml  RefreshControl.qml  RenderShadersControl.qml  RenderTargetControl.qml  ScrollText.qml  ShaderControl.qml  StateControl.qml  TextureControl.qml  UniformControl.qml  mainwin.qml
retrace/daemon/ui/qml/images/: README.txt
